<resources>
    <string name="app_name">Tubes 1</string>
    <string name="home_title">RS \nCepat Kembali</string>
    <string name="home_desc">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</string>
    <string name="btn_home">Buat Pertemuan</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="fab_content_desc">add doctor</string>
    <string name="fab_content_desc1">add pertemuan</string>
    <string name="btn_simpan">SIMPAN</string>
    <string name="nama">Nama</string>
    <string name="namaPasien">Nama Pasien</string>
    <string name="namaDokter">Nama Dokter</string>
    <string name="tanggalDatang">Tanggal</string>
    <string name="waktuDatang">Waktu</string>
    <string name="dokter">Dokter</string>
    <string name="keluhan">Keluhan</string>
    <string name="tanggal">Pilih Tanggal</string>
    <string name="waktu">Pilih Waktu</string>
    <string name="title_pertemuan">APPOINTMENT</string>
    <string name="spesialis">Spesialis</string>
    <string name="no_telp">Nomor Telepon</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="daftar_dokter">Daftar Dokter</string>
    <string name="daftar_pertemuan">Daftar Pertemuan</string>
    <string name="dismiss">DISMISS</string>
</resources>