<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/pertemuan_container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/namaPasien"></TextView>
            <TextView
                android:id="@+id/tv_namaPasien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/namaDokter"></TextView>
            <TextView
                android:id="@+id/tv_namaDokter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tanggalDatang"></TextView>

            <TextView
                android:id="@+id/tv_tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/waktuDatang"></TextView>

            <TextView
                android:id="@+id/tv_waktu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>
        </LinearLayout>

    </LinearLayout>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/ic_menu_delete"
        android:id="@+id/delete_btn"
        android:layout_alignParentRight="true">
    </ImageButton>
</RelativeLayout>